--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "expressjs backend for customer ids API",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "test.js"
   },
   "author": "Isaac S.",
